
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_un {int sun_path; int sun_family; } ;
struct sockaddr {int dummy; } ;
typedef int addr ;


 int AF_UNIX ;
 int SOCK_STREAM ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 int memset (struct sockaddr_un*,int ,int) ;
 int perror (char*) ;
 int socket (int ,int ,int ) ;
 int sprintf (int ,char*,char const*) ;

int ud_connect(const char *name)
{
 int fd;
 int r;
 struct sockaddr_un addr;

 fd = socket(AF_UNIX, SOCK_STREAM, 0);
 if (fd < 0) {
  perror("socket");
  return fd;
 }

 memset(&addr, 0, sizeof(addr));
 addr.sun_family = AF_UNIX;
 sprintf(addr.sun_path, "%s", name);

 r = connect(fd, (struct sockaddr *)&addr, sizeof(addr));
 if (r < 0) {
  perror("connect");
  close(fd);
  return r;
 }

 return fd;
}
